Fixed scaling issues when zooming in
Scaling used to go too far up on mobile. This seems to be fixed now

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -64,6 +64,7 @@ body {
     will-change: transform;
     transform-box: view-box;
     transition: transform 0.5s ease-out;
+    box-shadow: 5px, 10px, rgba(0, 0, 0, 0.5)
 }
 
 /* Small screens (less than 768 px) */
